fixed dark mode navigation bar

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -649,7 +649,7 @@ button:hover {
 		        align-items: center;
 		z-index: 100;
 		left: 0;
-		background: transparent;
+		background: #f5f4f4;
 		margin-top: 25px;
 	}
 
@@ -660,7 +660,8 @@ button:hover {
 		background: #f5f5f5;
 		position: absolute;
 		z-index: -1;
-		border-radius: 5px;
+        border-radius: 5px;
+        opacity: 0;
 	}
 
 	#on-top {
@@ -688,7 +689,9 @@ button:hover {
 		-webkit-box-pack: end;
 		    -ms-flex-pack: end;
 		        justify-content: flex-end;
-		right: 0;
+        right: 0;
+        background: #fff;
+        border-radius: 5px;
 	}
 
 	.side-nav ul li {
